2008-01-08  Richard Jones  <rjones@redhat.com>

	Clean up *.exe files.
	* Makefile.in: Clean up *.exe files.

	Version 0.4.0.1 released.
	* Makefile.in: Provide a 'winupload' target.

	Rename some dialogs in virt-ctrl.
	* virt-ctrl/vc_mainwindow.ml: Fix some "virtual machine manager" ->
	  "virt-ctrl" dialogs in main window.

	Fix bad paths in wininstaller.nsis.in.
	* wininstaller.nsis.in: 
	* .hgignore: Ignore *.orig files.

	Fix native virt-ctrl on Windows.
	* virt-ctrl/Makefile.in, virt-ctrl/mingw-gcc-wrapper.ml: Wrapper
	  around 'gcc' to fix native virt-ctrl builds on Windows/MinGW.
	* .hgignore: Ignore *.exe files.

2008-01-07  Richard Jones  <rjones@redhat.com>

	Updated MANIFEST.
	* MANIFEST: Bring the MANIFEST file up to date.

	mlvirtmanager renamed as virt-ctrl.
	* .hgignore, Makefile.in, configure.ac: Rename
	  mlvirtmanager as virt-ctrl to avoid any confusion with
	  the real virt-manager.
	* mlvirtmanager/, virt-ctrl/: Subdirectory moved.
	* README: Supporting documentation updated.

	Include mlvirtmanager in the Windows installer.
	* wininstaller.nsis.in: Include mlvirtmanager in the Windows
	  installer.
	* Makefile.in: Re-enable native code builds for Windows installer.
	* mlvirtmanager/Makefile.in: Pass $(LDFLAGS) when building on
	  Windows - you need to specify the location of $GTK/lib.

	Bundle Gtk DLLs and support files in the Windows installer.
	* configure.ac: Detect library paths instead of hard-
	  coding them.
	* wininstaller.nsis (removed): This file is now autogenerated.
	* wininstaller.nsis.in: Bundle Gtk DLLs and support files.
	* Makefile.in: More verbose messages from NSIS.

	Include required libraries in the Windows installer.
	* wininstaller.nsis: Include *.dll files.

	Windows installer.
	* Makefile.in, configure.ac: Add --with-nsis[=path/to/nsis] and
	  call out to 'makensis.exe'.
	* wininstaller.nsis, winlicense.rtf: Configuration and support
	  files for NSIS-based Windows installer.
	* README: Update documentation to reflect.